--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,9 @@
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.2",
+    "@types/bcrypt": "^5.0.3",
+    "@types/supertest": "^6.0.2",
+    "@types/jest": "^29.5.4",
     "jest": "^29.6.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
