--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,7 +13,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -26,7 +26,7 @@
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.2",
-    "@types/bcrypt": "^5.0.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/supertest": "^6.0.2",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.1",
